--- a/web/src/main/resources/i18n/messages_ru.properties
+++ b/web/src/main/resources/i18n/messages_ru.properties
@@ -1,3 +1,6 @@
 page.title=Пользователи
 page.footer=Нижнее меню
 page.person.title=Список пользователей
+language = ru
+label.registration = Регистрация
+label.login = Войти на сайт
