--- a/web/src/main/resources/i18n/messages.properties
+++ b/web/src/main/resources/i18n/messages.properties
@@ -1,3 +1,6 @@
 page.title=Persons Page
 page.footer=Custom Footer
 page.person.title=Persons {1} {2}
+language = en
+label.registration = Registration
+label.login = Log In
