--- a/web/src/main/resources/i18n/messages_en.properties
+++ b/web/src/main/resources/i18n/messages_en.properties
@@ -1,3 +1,6 @@
 page.title=Persons Page
 page.footer=Custom Footer
 page.person.title=Persons
+language = en
+label.registration = Registration
+label.login = Log In
