--- a/web/src/main/resources/i18n/messages.properties
+++ b/web/src/main/resources/i18n/messages.properties
@@ -1,6 +1,65 @@
-page.title=Persons Page
-page.footer=Custom Footer
-page.person.title=Persons {1} {2}
-language = en
-label.registration = Registration
-label.login = Log In
+label.appName=Hotel reservation
+label.admin=Administrator
+label.chooseUsername=Choose a username
+label.userName=Username
+label.single=single
+label.double=double
+label.triple=triple
+label.econom=econom
+label.standard=standard
+label.business=business
+label.pool=pool
+label.wifi=wifi
+label.breakfast=breakfast
+label.lunch=lunch
+label.dinner=dinner
+label.bar=bar
+label.gym=gym
+label.checkInTime=Check in time
+label.departureTime=Departure time
+label.additionalServices=Additional services
+label.price=Price
+label.enterLoginInformation=Enter login information
+label.numberOfPlaces=number of places
+label.classOfApartments=class of apartments
+label.nameClient=Name
+label.surname=Surname
+label.phone=Phone
+label.state=State
+label.orderActions=Order actions
+label.orderList=Order list
+label.userRegistration=User registration
+label.orderPayment=Order payment
+label.enterTheAmountToPay=Enter the amount to pay
+label.youAreLockedOutAndCannotPerformAnyActions=You are locked out and cannot perform any actions; contact your administrator
+button.enter=Enter
+button.delete=Delete
+button.toApprove=To Approve
+button.toRefuse=To Refuse
+button.logout=Logout
+button.registration=Registration
+button.login=login
+button.logIn=Log In
+button.password=Password
+button.GoToPersonalArea=Go to personal area
+button.viewOrders=View orders
+button.viewingRegisteredUsers=Viewing registered users
+button.blockedUsersList=Blocked Users List
+button.checkOrderStatus=Check order status
+button.makeAnOrder=Make an order
+button.toBlock=To block
+button.toPay=To pay
+table.name=Name
+table.surname=Surname
+table.dateBlock=Lock Date
+table.removeBlackList=Remove from blacklist
+text.personalArea=Personal area
+text.paymentWasSuccessfulWeAreWaitingForYouAtOurHotel=payment was successful, we are waiting for you at our hotel. Thak you!
+text.YourOrderHasBeenAcceptedWaitForAdministratorVerification=Your order has been accepted. Wait for administrator verification.
+text.noOrders=No orders
+text.listOfRegisteredUsers=List of registered users
+text.customerActions=Customer actions
+
+
+
+
