--- a/web/src/main/resources/i18n/messages_ru.properties
+++ b/web/src/main/resources/i18n/messages_ru.properties
@@ -1,6 +1,64 @@
-page.title=Пользователи
-page.footer=Нижнее меню
-page.person.title=Список пользователей
-language = ru
-label.registration = Регистрация
-label.login = Войти на сайт
+label.appName=Заказ гостиницы
+label.admin=Администратор
+label.chooseUsername=Выберите имя пользователя
+label.userName=Имя пользователя
+label.single=одноместный
+label.double=двухместный
+label.triple=трехместный
+label.econom=эконом
+label.standard=стандарт
+label.business=бизнес
+label.pool=бассейн
+label.wifi=wifi
+label.breakfast=завтрак
+label.lunch=обед
+label.dinner=ужин
+label.bar=бар
+label.gym=тренажерный зал
+label.checkInTime=Дата въезда
+label.departureTime=Дата отъезда
+label.additionalServices=Дополнительные услуги
+label.price=Цена
+label.enterLoginInformation=Введите данные для входа в систему
+label.numberOfPlaces=Число мест
+label.classOfApartments=Класса аппартаментов
+label.nameClient=Имя
+label.surname=Фамилия
+label.phone=Телефон
+label.state=Состояние
+label.orderActions=Действия над заказом
+label.orderList=Список заказов
+label.userRegistration=Регистрация пользователя
+label.orderPayment=Оплата заказа
+label.enterTheAmountToPay=Введите сумму для оплаты
+label.youAreLockedOutAndCannotPerformAnyActions=Вы заблокированы и не можете производить никаких действий. Обратитесь к администратору
+button.enter=Войти
+button.delete=Удалить
+button.toApprove=Одобрить
+button.toRefuse=Отказать
+button.logout=Выйти
+button.registration=Регистрация
+button.login=Логин
+button.logIn=Авторизация
+button.password=Пароль
+button.toPay=Оплатить
+button.GoToPersonalArea=Перейти в личный кабинет
+button.viewOrders=Просмотр заказов
+button.viewingRegisteredUsers=Просмотр зарегистрированных пользователей
+button.blockedUsersList=Список заблокированных пользователей
+button.checkOrderStatus=Проверить статус заказа
+button.makeAnOrder=Сделать заказ
+button.toBlock=Заблокировать
+table.name=Имя
+table.surname=Фамилия
+table.dateBlock=Дата блокировки
+table.removeBlackList=Удалить из черного списка
+text.personalArea=Личный кабинет
+text.paymentWasSuccessfulWeAreWaitingForYouAtOurHotel=Оплата прошла успешно, ждем Вас в нашей гостинице, спасибо!
+text.YourOrderHasBeenAcceptedWaitForAdministratorVerification=Ваш заказ принят, дождитесь проверки администратора
+text.noOrders=Заказов нет
+text.listOfRegisteredUsers=Список зарегистрированных пользователей
+text.customerActions=Действия над клиентом
+
+
+
