fix Spring Security

--- a/web/src/main/resources/i18n/messages.properties
+++ b/web/src/main/resources/i18n/messages.properties
@@ -32,7 +32,8 @@ label.userRegistration=User registration
 label.orderPayment=Order payment
 label.enterTheAmountToPay=Enter the amount to pay
 label.youAreLockedOutAndCannotPerformAnyActions=You are locked out and cannot perform any actions; contact your administrator
-button.enter=Enter
+label.copyPassport = Copy of customer passport client:
+button.enter=Submit
 button.delete=Delete
 button.toApprove=To Approve
 button.toRefuse=To Refuse
