--- a/web/src/main/resources/i18n/messages_ru.properties
+++ b/web/src/main/resources/i18n/messages_ru.properties
@@ -32,6 +32,7 @@ label.userRegistration=Регистрация пользователя
 label.orderPayment=Оплата заказа
 label.enterTheAmountToPay=Введите сумму для оплаты
 label.youAreLockedOutAndCannotPerformAnyActions=Вы заблокированы и не можете производить никаких действий. Обратитесь к администратору
+label.copyPassport = Copy of customer passport client:
 button.enter=Войти
 button.delete=Удалить
 button.toApprove=Одобрить
