--- a/web/src/main/resources/i18n/messages_en.properties
+++ b/web/src/main/resources/i18n/messages_en.properties
@@ -32,8 +32,9 @@ label.userRegistration=User registration
 label.orderPayment=Order payment
 label.enterTheAmountToPay=Enter the amount to pay
 label.youAreLockedOutAndCannotPerformAnyActions=You are locked out and cannot perform any actions; contact your administrator
+label.copyPassport = Copy of customer passport client:
 button.toBlock=To block
-button.enter=Enter
+button.enter=Submit
 button.delete=Delete
 button.toApprove=To Approve
 button.toRefuse=To Refuse
