--- a/web/src/main/resources/i18n/messages.properties
+++ b/web/src/main/resources/i18n/messages.properties
@@ -25,7 +25,7 @@ label.classOfApartments=class of apartments
 label.nameClient=Name
 label.surname=Surname
 label.phone=Phone
-label.state=State
+label.state=State order
 label.orderActions=Order actions
 label.orderList=Order list
 label.userRegistration=User registration
@@ -43,6 +43,7 @@ button.login=login
 button.logIn=Log In
 button.password=Password
 button.GoToPersonalArea=Go to personal area
+button.GoToRegistratedUsers= Go to list registrated users
 button.viewOrders=View orders
 button.viewingRegisteredUsers=Viewing registered users
 button.blockedUsersList=Blocked Users List
@@ -50,6 +51,7 @@ button.checkOrderStatus=Check order status
 button.makeAnOrder=Make an order
 button.toBlock=To block
 button.toPay=To pay
+button.showCopyPassport = Show copy of passport
 table.name=Name
 table.surname=Surname
 table.dateBlock=Lock Date
