--- a/web/src/main/resources/i18n/messages_en.properties
+++ b/web/src/main/resources/i18n/messages_en.properties
@@ -25,7 +25,7 @@ label.classOfApartments=class of apartments
 label.nameClient=Name
 label.surname=Surname
 label.phone=Phone
-label.state=State
+label.state=State order
 label.orderActions=Order actions
 label.orderList=Order list
 label.userRegistration=User registration
@@ -33,6 +33,7 @@ label.orderPayment=Order payment
 label.enterTheAmountToPay=Enter the amount to pay
 label.youAreLockedOutAndCannotPerformAnyActions=You are locked out and cannot perform any actions; contact your administrator
 label.copyPassport = Copy of customer passport client:
+button.showCopyPassport = Show copy of passport
 button.toBlock=To block
 button.enter=Submit
 button.delete=Delete
@@ -46,6 +47,7 @@ button.password=Password
 button.makeAnOrder=Make an order
 button.toPay=To pay
 button.GoToPersonalArea=Go to personal area
+button.GoToRegistratedUsers= Go to list registrated users
 button.viewOrders=View orders
 button.viewingRegisteredUsers=Viewing registered users
 button.blockedUsersList=Blocked Users List
