--- a/web/src/main/resources/i18n/messages_ru.properties
+++ b/web/src/main/resources/i18n/messages_ru.properties
@@ -25,14 +25,14 @@ label.classOfApartments=Класса аппартаментов
 label.nameClient=Имя
 label.surname=Фамилия
 label.phone=Телефон
-label.state=Состояние
+label.state=Состояние заказа
 label.orderActions=Действия над заказом
 label.orderList=Список заказов
 label.userRegistration=Регистрация пользователя
 label.orderPayment=Оплата заказа
 label.enterTheAmountToPay=Введите сумму для оплаты
 label.youAreLockedOutAndCannotPerformAnyActions=Вы заблокированы и не можете производить никаких действий. Обратитесь к администратору
-label.copyPassport = Copy of customer passport client:
+label.copyPassport = Копия пасспорта клиента
 button.enter=Войти
 button.delete=Удалить
 button.toApprove=Одобрить
@@ -44,12 +44,14 @@ button.logIn=Авторизация
 button.password=Пароль
 button.toPay=Оплатить
 button.GoToPersonalArea=Перейти в личный кабинет
+button.GoToRegistratedUsers= Перейти к списку зарегистрированных пользователей
 button.viewOrders=Просмотр заказов
 button.viewingRegisteredUsers=Просмотр зарегистрированных пользователей
 button.blockedUsersList=Список заблокированных пользователей
 button.checkOrderStatus=Проверить статус заказа
 button.makeAnOrder=Сделать заказ
 button.toBlock=Заблокировать
+button.showCopyPassport = Показать копию пасспорта
 table.name=Имя
 table.surname=Фамилия
 table.dateBlock=Дата блокировки
