--- a/web/src/main/resources/i18n/messages.properties
+++ b/web/src/main/resources/i18n/messages.properties
@@ -32,7 +32,7 @@ label.userRegistration=User registration
 label.orderPayment=Order payment
 label.enterTheAmountToPay=Enter the amount to pay
 label.youAreLockedOutAndCannotPerformAnyActions=You are locked out and cannot perform any actions; contact your administrator
-label.copyPassport = Copy of customer passport client:
+label.copyPassport = Download a copy of the client passport:
 button.enter=Submit
 button.delete=Delete
 button.toApprove=To Approve
@@ -43,7 +43,7 @@ button.login=login
 button.logIn=Log In
 button.password=Password
 button.GoToPersonalArea=Go to personal area
-button.GoToRegistratedUsers= Go to list registrated users
+button.GoToRegisteredUsers= Go to list registered users
 button.viewOrders=View orders
 button.viewingRegisteredUsers=Viewing registered users
 button.blockedUsersList=Blocked Users List
@@ -62,6 +62,9 @@ text.YourOrderHasBeenAcceptedWaitForAdministratorVerification=Your order has bee
 text.noOrders=No orders
 text.listOfRegisteredUsers=List of registered users
 text.customerActions=Customer actions
+text.noBlackListUsers=No blocked users
+text.noRegisteredUsers= No registered users
+text.youHaveNoOrders=You have no orders
 
 
 
