--- a/web/src/main/resources/i18n/messages_ru.properties
+++ b/web/src/main/resources/i18n/messages_ru.properties
@@ -32,7 +32,7 @@ label.userRegistration=Регистрация пользователя
 label.orderPayment=Оплата заказа
 label.enterTheAmountToPay=Введите сумму для оплаты
 label.youAreLockedOutAndCannotPerformAnyActions=Вы заблокированы и не можете производить никаких действий. Обратитесь к администратору
-label.copyPassport = Копия пасспорта клиента
+label.copyPassport = Загрузить копию пасспорта клиента
 button.enter=Войти
 button.delete=Удалить
 button.toApprove=Одобрить
@@ -44,7 +44,7 @@ button.logIn=Авторизация
 button.password=Пароль
 button.toPay=Оплатить
 button.GoToPersonalArea=Перейти в личный кабинет
-button.GoToRegistratedUsers= Перейти к списку зарегистрированных пользователей
+button.GoToRegisteredUsers= Перейти к списку зарегистрированных пользователей
 button.viewOrders=Просмотр заказов
 button.viewingRegisteredUsers=Просмотр зарегистрированных пользователей
 button.blockedUsersList=Список заблокированных пользователей
@@ -62,6 +62,11 @@ text.YourOrderHasBeenAcceptedWaitForAdministratorVerification=Ваш заказ 
 text.noOrders=Заказов нет
 text.listOfRegisteredUsers=Список зарегистрированных пользователей
 text.customerActions=Действия над клиентом
+text.noBlackListUsers=Заблокированных пользователей нет
+text.noRegisteredUsers= Зарегистрированных пользователей нет
+text.youHaveNoOrders=У Вас нет заказов
+
+
 
 
 
