--- a/web/src/main/resources/i18n/messages_en.properties
+++ b/web/src/main/resources/i18n/messages_en.properties
@@ -32,8 +32,7 @@ label.userRegistration=User registration
 label.orderPayment=Order payment
 label.enterTheAmountToPay=Enter the amount to pay
 label.youAreLockedOutAndCannotPerformAnyActions=You are locked out and cannot perform any actions; contact your administrator
-label.copyPassport = Copy of customer passport client:
-button.showCopyPassport = Show copy of passport
+label.copyPassport = Download a copy of the client passport:
 button.toBlock=To block
 button.enter=Submit
 button.delete=Delete
@@ -41,17 +40,18 @@ button.toApprove=To Approve
 button.toRefuse=To Refuse
 button.logout=Logout
 button.registration=Registration
-button.login=login
+button.login=Login
 button.logIn=Log In
 button.password=Password
 button.makeAnOrder=Make an order
 button.toPay=To pay
 button.GoToPersonalArea=Go to personal area
-button.GoToRegistratedUsers= Go to list registrated users
+button.GoToRegisteredUsers= Go to list registered users
 button.viewOrders=View orders
 button.viewingRegisteredUsers=Viewing registered users
 button.blockedUsersList=Blocked Users List
 button.checkOrderStatus=Check order status
+button.showCopyPassport = Show copy of passport
 table.name=Name
 table.surname=Surname
 table.dateBlock=Lock Date
@@ -62,6 +62,11 @@ text.YourOrderHasBeenAcceptedWaitForAdministratorVerification=Your order has bee
 text.noOrders=No orders
 text.listOfRegisteredUsers=List of registered users
 text.customerActions=Customer actions
+text.noBlackListUsers=No blocked users
+text.noRegisteredUsers= No registered users
+text.youHaveNoOrders=You have no orders
+
+
 
 
 
