--- a/web/src/main/resources/i18n/messages_en.properties
+++ b/web/src/main/resources/i18n/messages_en.properties
@@ -65,6 +65,20 @@ text.customerActions=Customer actions
 text.noBlackListUsers=No blocked users
 text.noRegisteredUsers= No registered users
 text.youHaveNoOrders=You have no orders
+error.login=You entered an incorrect username or password or you need to register
+error.locked=This user is already blocked!
+error.userBlocked=The selected user is blocked!
+error.wrongAmount=You entered an incorrect amount, please try again
+error.orderPaid=The order has already been paid after approval
+error.registration=A user with the same name already exists
+error.noOrderWithId=You don't have an order with this id!
+error.consideration=The order has not yet been approved by the administrator
+error.rejected=Your order was rejected by the administrator!
+error.alreadyPaid=The order has already been paid, we are waiting for you in our hotel!
+error.orderDeleted = Order deleted!
+
+
+
 
 
 
