--- a/web/src/main/resources/i18n/messages_ru.properties
+++ b/web/src/main/resources/i18n/messages_ru.properties
@@ -65,6 +65,19 @@ text.customerActions=Действия над клиентом
 text.noBlackListUsers=Заблокированных пользователей нет
 text.noRegisteredUsers= Зарегистрированных пользователей нет
 text.youHaveNoOrders=У Вас нет заказов
+error.login=Вы ввели неверное имя или пароль либо Вам необходимо зарегистрироваться
+error.locked=Такой пользователь уже заблокирован!
+error.userBlocked=Выбранный пользователь заблокирован!
+error.wrongAmount=Вы ввели неверную сумму, попробуйте еще раз
+error.orderPaid=Заказ уже был оплачен после одобрения
+error.registration=Пользователь с таким именем уже существует
+error.noOrderWithId=Заказа с таким id у Вас нет!
+error.consideration=Заказ еще не одобрен администратором
+error.rejected=Ваш заказ отклонен администратором!
+error.alreadyPaid=Заказ уже оплачен, ждем Вас в нашей гостинице!
+error.orderDeleted = Заказ удален!
+
+
 
 
 
