--- a/web/src/main/resources/i18n/messages.properties
+++ b/web/src/main/resources/i18n/messages.properties
@@ -33,31 +33,31 @@ label.orderPayment=Order payment
 label.enterTheAmountToPay=Enter the amount to pay
 label.youAreLockedOutAndCannotPerformAnyActions=You are locked out and cannot perform any actions; contact your administrator
 label.copyPassport = Download a copy of the client passport:
+button.toBlock=To block
 button.enter=Submit
 button.delete=Delete
 button.toApprove=To Approve
 button.toRefuse=To Refuse
 button.logout=Logout
 button.registration=Registration
-button.login=login
+button.login=Login
 button.logIn=Log In
 button.password=Password
+button.makeAnOrder=Make an order
+button.toPay=To pay
 button.GoToPersonalArea=Go to personal area
 button.GoToRegisteredUsers= Go to list registered users
 button.viewOrders=View orders
 button.viewingRegisteredUsers=Viewing registered users
 button.blockedUsersList=Blocked Users List
 button.checkOrderStatus=Check order status
-button.makeAnOrder=Make an order
-button.toBlock=To block
-button.toPay=To pay
 button.showCopyPassport = Show copy of passport
 table.name=Name
 table.surname=Surname
 table.dateBlock=Lock Date
 table.removeBlackList=Remove from blacklist
 text.personalArea=Personal area
-text.paymentWasSuccessfulWeAreWaitingForYouAtOurHotel=payment was successful, we are waiting for you at our hotel. Thak you!
+text.paymentWasSuccessfulWeAreWaitingForYouAtOurHotel=payment was successful, we are waiting for you at our hotel. Thank you!
 text.YourOrderHasBeenAcceptedWaitForAdministratorVerification=Your order has been accepted. Wait for administrator verification.
 text.noOrders=No orders
 text.listOfRegisteredUsers=List of registered users
@@ -65,6 +65,22 @@ text.customerActions=Customer actions
 text.noBlackListUsers=No blocked users
 text.noRegisteredUsers= No registered users
 text.youHaveNoOrders=You have no orders
+error.login=You entered an incorrect username or password or you need to register
+error.locked=This user is already blocked!
+error.userBlocked=The selected user is blocked!
+error.wrongAmount=You entered an incorrect amount, please try again
+error.orderPaid=The order has already been paid after approval
+error.registration=A user with the same name already exists
+error.noOrderWithId=You don't have an order with this id!
+error.consideration=The order has not yet been approved by the administrator
+error.rejected=Your order was rejected by the administrator!
+error.alreadyPaid=The order has already been paid, we are waiting for you in our hotel!
+error.orderDeleted = Order deleted!
+
+
+
+
+
 
 
 
